--- a/themes/tella/layouts/partials/head.html
+++ b/themes/tella/layouts/partials/head.html
@@ -9,7 +9,7 @@
 <link href='{{ "/css/fa6.min.css" | relURL }}' rel="stylesheet" type="text/css">
 {{ end }}
 {{ $styles := resources.Get "css/style.css" | postCSS }}
-{{ if IsProduction }}
+{{ if .IsProduction }}
 <link rel="stylesheet" href="{{ $styles.RelPermalink }}">
 {{ else }}
 {{ $styles := $styles | minify | fingerprint | resources.PostProcess }}
