changed base url

--- a/themes/tella/layouts/partials/head.html
+++ b/themes/tella/layouts/partials/head.html
@@ -8,9 +8,10 @@
 {{ if .Site.Params.icon.fontawesome }}
 <link href='{{ "/css/fa6.min.css" | relURL }}' rel="stylesheet" type="text/css">
 {{ end }}
+
 {{ $styles := resources.Get "css/style.css" | postCSS }}
-{{ $styles := $styles | minify | fingerprint | resources.PostProcess }}
-  <link rel="stylesheet" href="{{ $styles.RelPermalink }}" />
+<link rel="stylesheet" href="{{ $styles.RelPermalink }}">
+
 {{ if .IsHome }}
 <link rel="stylesheet" href='{{ "/css/swiper-bundle.min.css" | relURL }}'>
 {{ end }}
