added contact form

--- a/layouts/_default/about.html
+++ b/layouts/_default/about.html
@@ -13,7 +13,7 @@
                     {{ end }}
 
                     <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true"
-                        netlify-honeypot="bot-field" action="/success.html" onsubmit="disableButton(this)">
+                        netlify-honeypot="bot-field" action="/success.html" onsubmit="disableButton(this)" netlify>
 
                         <input type="hidden" name="form-name" value="contact">
 
