added contact form

--- a/layouts/_default/about.html
+++ b/layouts/_default/about.html
@@ -15,7 +15,7 @@
                     <form
                     name="contact"
                     method="POST"
-                    action="/.netlify/functions/submission-created" 
+                    action="contact" 
                     data-netlify="true"
                     netlify-honeypot="bot-field"
                     onsubmit="disableButton(this)">
