added contact form

--- a/layouts/_default/about.html
+++ b/layouts/_default/about.html
@@ -20,7 +20,7 @@
                     netlify-honeypot="bot-field"
                     onsubmit="disableButton(this)">
 
-                        <input type="hidden" name="form-name" value="contact">
+                        <input type="hidden" name="form-name" value="/success.html">
 
                         <!-- Honeypot field -->
                         <p hidden>
