added contact form

--- a/layouts/_default/about.html
+++ b/layouts/_default/about.html
@@ -15,12 +15,12 @@
                     <form
                     name="contact"
                     method="POST"
-                    action="contact" 
+                    action="success" 
                     data-netlify="true"
                     netlify-honeypot="bot-field"
                     onsubmit="disableButton(this)">
 
-                        <input type="hidden" name="form-name" value="/success.html">
+                        <input type="hidden" name="form-name" value="contact">
 
                         <!-- Honeypot field -->
                         <p hidden>
